--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -507,7 +507,7 @@ footer p a:focus {
 }
 
 .showevent {
-  height: 8rem;
+  height: auto;
   margin: 1rem 0 0 0;
   border-bottom: 0.1rem dotted #332532;
   padding: 0 0 1rem 0;
@@ -567,6 +567,13 @@ form .inputbox label {
     font-size: 1.25rem;
     font-weight: 600;
     transition: all 0.5s;
+}
+
+form .inputbox p {
+  font-size: 0.8rem;
+  text-align: center;
+  margin: 0.25rem 0 0 0;
+  color: #e84c3d;
 }
 
 input, textarea, form .picspec {
@@ -751,8 +758,8 @@ form .inputbox .picfile {
     margin: 1rem 0 0 0;
     padding: 0.5rem 2.5rem 0.5rem 1rem;
     font-size: 1rem;
-    color:#FFF;
-    background:#e84c3d;
+    color:#e84c3d;
+    background:none;
 }
 
 .alert i {
@@ -782,7 +789,7 @@ input[type=submit], #send_position, button  {
     font-family: 'Roboto', sans-serif;
     font-size: 1.5em;
     font-weight: 600;
-    margin: 1rem 0 1rem 0;
+    margin: 1rem 0 3rem 0;
     color:#FFF;
     background:#332532;
     border: 0.125rem solid #FFF;
@@ -1094,6 +1101,8 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   font-size: 1rem;
 }
 
+
+
 .eventview-comments .comment:last-child {
   border-bottom:none;
 }
@@ -1108,14 +1117,38 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   padding: 0.5rem;
   border-radius: 1rem;
   margin: 0.5rem 0 0 0;
+  position: relative;
 }
 
 .eventview-comments .comment .answer {
   margin: 0 0 0 1rem;
 }
 
+.eventview-comments .comment .answer_comment {
+  margin: 1rem 0;
+}
+
 .eventview-comments .comment .answer .answer-content{
   margin: 0.5rem 0 0 0;
+}
+
+.eventview-comments .comment .comment-content .editanswer {
+  position: absolute;
+  width: 4rem;
+  height: 3rem;
+  font-size: 1rem;
+  margin: 0;
+  right: 0.25rem;
+  top: 0.25rem;
+}
+
+#submitAnswerCom,
+#submitEditAnswerCom,
+.eventpage-comments .comment .answer_comment .cancel,
+.eventpage-comments .comment .answer .comment-content .answer_edit_comment .cancel {
+  font-size: 1rem;
+  height: 2.5rem;
+  margin: 0;
 }
 
 /* ################################ EVENT :: PAGE ################################ */
@@ -1149,8 +1182,9 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   transition: all 0.5s;
 }
 
-#add_new_comment label {
-
+#add_new_comment .cancel {
+  width: 100%;
+  height: 3rem;
 }
 
 #add_new_comment input, #add_new_comment textarea {
@@ -1161,6 +1195,11 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   height: 3rem;
   font-size: 1.25rem;
   background: #F77A52;
+}
+
+.eventpage-comments .comment .answer .comment-content p:first-child,
+.eventpage-comments .comment .comment-content p:first-child {
+    padding-right: 4rem;
 }
 
 /* ################################ CREATE :: MAP ################################ */
@@ -1239,7 +1278,7 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 }
 
 .downarrow {
-    margin: 5% 0 0 0;
+    margin: 12% 0 0 0;
 }
 
 /* ############################## MAP ############################## */
@@ -1264,6 +1303,10 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   margin: 0 1% 0.5rem 1%;
 }
 
+input[type=submit].endform {
+  margin-bottom: 3.5rem;
+}
+
 }
 
 /* ############################## DESKTOP ############################## */
@@ -1281,6 +1324,10 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 .userbar {
   width: 35%;
   margin: 3% 0 0 0;
+}
+
+.userbar a button {
+  margin: 0;
 }
 
 .downarrow {
@@ -1410,6 +1457,10 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   height: 2.5rem;
 }
 
+#header button#send_position {
+  margin: 0;
+}
+
 /* ############################## MAP::EVENTVIEW ############################## */
 
 #event_view {
@@ -1506,6 +1557,7 @@ input[type=submit]:focus, #send_position:focus, button:focus {
 
 .eventpage-infos .eventpage-text table {
   width: 35%;
+  margin: 0;
 }
 
 .eventpage-interact {
@@ -1532,9 +1584,27 @@ input[type=submit]:focus, #send_position:focus, button:focus {
   margin: 0 auto;
 }
 
+#add_new_comment .cancel {
+  width: 5%;
+  height: 3rem;
+  margin: 0;
+}
+
 .add_answer_comment {
   width: 25%;
   height: 2.5rem;
+}
+
+.eventpage-comments .comment .answer_comment .cancel,
+.eventpage-comments .comment .answer .comment-content .answer_edit_comment .cancel,
+.eventpage-comments .comment .comment-content .answer_edit_comment .cancel {
+  position: absolute;
+  width: 4rem;
+  height: 3rem;
+  font-size: 1rem;
+  margin: 0;
+  right: 4.25rem;
+  top: 0.25rem;
 }
 
 /* ############################## FORMS ############################## */
@@ -1555,10 +1625,6 @@ header #longlogo {
 
 #user_information .edit-profile {
   width: 30%;
-}
-
-.showevent {
-  height: auto;
 }
 
 .showevent .blocinfo {
@@ -1605,11 +1671,25 @@ form .timetable .adddates:focus {
   cursor: pointer;
 }
 
+#submitCom {
+  width: 30%;
+}
+
+#submitCom:hover,
+#submitCom:focus {
+  color:#FFF;
+  background:#332532;
+}
+
 #dateFirst .lane-space-around,
 #dateinter,
 #datesup {
-  width: 25%;
+  width: 55%;
   margin: 0.5rem auto;
+}
+
+#dateFirst input[type=time] {
+  width: 30%;
 }
 
 input[type=submit],
@@ -1633,7 +1713,12 @@ button:hover  {
 
 input[type=submit].endform {
   width: 50%;
-  margin: 0.5rem 0 3.5rem 75%;
+  margin: 0.5rem 0 3.5rem 50%;
+}
+
+input[type=submit].eventcreate {
+  width: 100%;
+  margin: 1rem 0 3.5rem 0;
 }
 
 }
